--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,6 @@
         "composer/installers": "~1.0"
     },
     "extra": {
-        "installer-name": "mcsubscribe"
+        "installer-name": "mailchimpsubscribe"
     }
 }
